Phase 35的功能，fixed 叫分，手牌显示，地主显示等问题
